[JAEGER] Fixed EQ/NE with non-int32 known types (bug 582185).